Merged revisions 8652,8654-8665,8669-8672,8675,8678,8683,8692-8700,8705-8707,8710,8712-8727,8729-8733,8736-8737,8746-8749,8751,8753,8757-8758,8761-8763,8768-8772,8774-8779,8781,8783-8792,8797,8802-8805,8807-8813,8817-8840,8842-8850,8852-8864,8866-8869,8872-8873,8875-8876,8878-8881,8883-8911,8913-8916,8918-8934,8937,8942,8944,8946,8948,8952-8957,8959-8966,8968-8977,8979 via svnmerge from svn+ssh://fabratu@scm.gforge.inria.fr/svn/proactive/trunk
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/ProActiveIntegrationAS@8983 28e8926c-6b08-0410-baaa-805c5e19b8d6